tests/typing/bad/testfile-arith-4.c

struct S { int a; };
int main() { struct S s; char *p; p+s; }
